@@ -41,10 +41,13 @@
 
 /**
  * Loads a backdrop from a file.
- * @param  fd         The file descriptor of the already opened file.
- * @param  pixelsize  The multiplicator how big one pixel is.
+ * @param  fd            The file descriptor of the already opened file.
+ * @param  pixelsize     The multiplicator how big one pixel is.
+ * @param  flags         The flags for SDL CreateRGBSurface.
+ * @param  bitsperpixel  The bits per pixel for the surface.
  */
-SDL_Surface * fn_drop_load(int fd, Uint8 pixelsize);
+SDL_Surface * fn_drop_load(int fd, Uint8 pixelsize,
+    Uint32 flags, int bitsperpixel);
 
 /* --------------------------------------------------------------- */
 
