@@ -42,6 +42,8 @@
 
 SDL_Surface * fn_msgbox(
     Uint8 pixelsize,
+    Uint32 flags,
+    int bitsperpixel,
     fn_tilecache_t * tilecache,
     char * text
     )
@@ -74,10 +76,10 @@ SDL_Surface * fn_msgbox(
   }
 
   msgbox = SDL_CreateRGBSurface(
-      FN_SURFACE_FLAGS,
+      flags,
       FN_FONT_WIDTH * pixelsize * (columns + 2),
       FN_FONT_HEIGHT * pixelsize * (rows + 2),
-      FN_COLOR_DEPTH,
+      bitsperpixel,
       0,
       0,
       0,
