@@ -166,10 +166,10 @@ int main(int argc, char ** argv)
     }
 
     level = SDL_CreateRGBSurface(
-            FN_SURFACE_FLAGS,
+            screen->flags,
             FN_TILE_WIDTH * pixelsize * FN_LEVEL_WIDTH,
             FN_TILE_HEIGHT * pixelsize * FN_LEVEL_HEIGHT,
-            FN_COLOR_DEPTH,
+            screen->format->BitsPerPixel,
             0,
             0,
             0,
